test/e2e-istio-values.yaml
#
# Minimal Istio Configuration required by Flagger
#

# pilot configuration
pilot:
  enabled: true
  sidecar: true
  resources:
    requests:
      cpu: 100m
      memory: 128Mi

gateways:
  enabled: false
  istio-ingressgateway:
    autoscaleMax: 1

# sidecar-injector webhook configuration
sidecarInjectorWebhook:
  enabled: true

# galley configuration
galley:
  enabled: false

# mixer configuration
mixer:
  policy:
    enabled: false
    replicaCount: 1
    autoscaleEnabled: false
  telemetry:
    enabled: true
    replicaCount: 1
    autoscaleEnabled: false
  resources:
    requests:
      cpu: 100m
      memory: 128Mi

# addon prometheus configuration
prometheus:
  enabled: true
  scrapeInterval: 5s

# addon jaeger tracing configuration
tracing:
  enabled: false

# Common settings.
global:
  proxy:
    # Resources for the sidecar.
    resources:
      requests:
        cpu: 100m
        memory: 64Mi
      limits:
        cpu: 2000m
        memory: 256Mi
  useMCP: false
